<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012-2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Advanced settings</string>
    <string name="defaults_button">Reset to default</string>
    <string name="screen_colors_title">Colors</string>
    <string name="category_mdnie_title">Screen</string>
    <string name="mdnie_scenario_title_head">Scenario</string>
    <string name="mdnie_scenario_summary_head">Set the mDNIe scenario</string>
    <string name="mdnie_mode_title_head">Mode</string>
    <string name="mdnie_mode_summary_head">Set the mDNIe mode</string>
    <string name="mdnie_negative_title_head">Negative mode</string>
    <string name="mdnie_negative_summary_head">Invert display colors</string>
    <string name="mdnie_outdoor_title_head">Outdoor mode</string>
    <string name="mdnie_outdoor_summary_head">Adjust display for outdoor use</string>
    <string name="panel_gamma_title_head">Screen gamma</string>
    <string name="panel_gamma_summary_head">Set screen gamma value</string>
    <string name="panel_color_temp_title_head">Screen color temperature</string>
    <string name="panel_color_temp_summary_head">Turn screen off and back on to activate</string>
    <string name="category_sensors_title">Sensors</string>
    <string name="touchkey_subcat_title">Touch key</string>
    <string name="touchkey_light_title_head">Enable keys backlight</string>
    <string name="touchkey_light_summary_head">Light up touch keys when screen is on</string>
    <string name="category_sound_title">Sound</string>
    <string name="sound_volume_title">Volume</string>
    <string name="voc_ep_xgain_title_head">Extra gain in voice calls</string>
    <string name="voc_ep_xgain_summary_head">Boost volume of earpiece during voice calls</string>
    <string name="category_dock_title">Dock</string>
    <string name="dockaudio_subcat_title">DOCK AUDIO</string>
    <string name="use_dock_audio_title_head">Use Dock USB Audio</string>
    <string name="use_dock_audio_summary_head">Use the passive audio out on the dock</string>
</resources>
