<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:key="volume"
            android:title="@string/sound_volume_title">

        <!-- Extra earpiece gain in voice calls -->
        <CheckBoxPreference
                android:key="voc_ep_xgain"
                android:title="@string/voc_ep_xgain_title_head"
                android:summary="@string/voc_ep_xgain_summary_head"
                android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/dockaudio_subcat_title">

        <CheckBoxPreference
                android:key="dock_audio"
                android:title="@string/use_dock_audio_title_head"
                android:summary="@string/use_dock_audio_summary_head"
        />
    </PreferenceCategory>
</PreferenceScreen>
